--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="height: 100vh;">
+  <body style="height: 100vh; margin: 0;">
     <script type="module" src="index.js"></script>
   </body>
 </html>
